# SymmetryML

./: .gitignore  LICENSE  features.html  index.html  pyproject.toml  use-cases.html
Experiments_From_Papers/NeurIPS2024/Comparison_LieGAN/: LieGAN_comparison_affine.ipynb
Experiments_From_Papers/NeurIPS2024/ModelSymmetry/: PenguinsSVM.ipynb
Experiments_From_Papers/NeurIPS2024/non_affine/: non_affine.ipynb
Experiments_From_Papers/SIAM_MathOfDS/: Isometry_Discovery.ipynb  Symmetry_Discovery_NN-Copy1.ipynb  Symmetry_Discovery_NN.ipynb
css/: main.css
docs/: 404.html  index.html
docs/canonicalization/: index.html
docs/discovery/: index.html
docs/lse/: index.html
docs/regularization/: index.html
docs/search/: search_index.json
examples/: CircleSphere_demo.ipynb  basic_circle.py  basic_sphere.py
js/: main.js
src/symdisc/: __init__.py
src/symdisc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/symdisc/discovery/: __init__.py  builders.py  equivariance.py  function_invariance.py  invariance.py  lse.py
src/symdisc/discovery/lse/: __init__.py  core.py
src/symdisc/discovery/lse/distances/: __init__.py  chord.py  geodesic_projected.py
src/symdisc/discovery/lse/projections/: __init__.py  penalty_homotopy.py  svd_pseudoinverse.py
src/symdisc/vector_fields/: __init__.py  euclidean.py
tests/: running_tests.py  test_builders_invariance.py  test_equivariance.py  test_function_discovery_invariant.py  test_lse.py  test_pytorch.py  test_vector_fields.py
